experiments/logs/res101_voc_2007_trainval__res101.txt.2018-06-15_16-33-11
+ echo Logging output to experiments/logs/res101_voc_2007_trainval__res101.txt.2018-06-15_16-33-11
Logging output to experiments/logs/res101_voc_2007_trainval__res101.txt.2018-06-15_16-33-11
+ set +x
+ '[' '!' -f output/res101/voc_2007_trainval/default/res101_faster_rcnn_iter_200000.ckpt.index ']'
+ [[ ! -z '' ]]
+ CUDA_VISIBLE_DEVICES=0
+ time python ./tools/trainval_net2.py --weight data/imagenet_weights/res101.ckpt --imdb voc_2007_trainval --imdbval voc_2007_test --iters 200000 --cfg experiments/cfgs/res101_rfcn.yml --net res101 --set ANCHOR_SCALES '[8,16,32]' ANCHOR_RATIOS '[0.5,1,2]' TRAIN.STEPSIZE 50000
Traceback (most recent call last):
  File "./tools/trainval_net2.py", line 15, in <module>
    from datasets.factory import get_imdb
  File "/home/pc/tf_rfcnc2/tools/../lib/datasets/factory.py", line 14, in <module>
    from datasets.pascal_voc import pascal_voc
  File "/home/pc/tf_rfcnc2/tools/../lib/datasets/pascal_voc.py", line 167
    print index
              ^
SyntaxError: invalid syntax
Command exited with non-zero status 1
0.69user 0.29system 0:00.76elapsed 129%CPU (0avgtext+0avgdata 150468maxresident)k
0inputs+0outputs (0major+35687minor)pagefaults 0swaps
